Fix up spacing and images.

--- a/src/views/conference/2020/index/index.scss
+++ b/src/views/conference/2020/index/index.scss
@@ -8,7 +8,7 @@
 .title-banner-image.mod-2020 {
     opacity: .75;
     margin-bottom: 1.75rem;
-    background-image: url("/images/conference/index/2019/title-banner.jpg");
+    background-image: url("/images/conference/index/2020/title-banner.jpg");
     background-position: center;
     background-size: cover;
     width: 100%;
@@ -49,13 +49,12 @@
 
 td {
     padding: .75rem 1.25rem;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 .conf2020-panel-row-icon-image {
-    margin-top: .125rem;
-    width: 1rem;
-    height: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .button.mod-2020-panel {
